--- a/Gift.html
+++ b/Gift.html
@@ -134,16 +134,16 @@
    <div id="dragcontainer">
     <div id="spincontainer">
 
-        <img src="images/img1.jpeg" alt="">
-        <img src="images/img2.jpeg" alt="">
-        <img src="images/img3.jpeg" alt="">
-        <img src="images/img4.jpeg" alt="">
-        <img src="images/img5.jpeg" alt="">
-        <img src="images/img6.jpeg" alt="">
-        <img src="images/img1.jpeg" alt="">
-        <img src="images/img2.jpeg" alt="">
-        <img src="images/img3.jpeg" alt="">
-        <img src="images/img4.jpeg" alt="">
+        <img src="img1.jpeg" alt="">
+        <img src="img2.jpeg" alt="">
+        <img src="img3.jpeg" alt="">
+        <img src="img4.jpeg" alt="">
+        <img src="img5.jpeg" alt="">
+        <img src="img6.jpeg" alt="">
+        <img src="img1.jpeg" alt="">
+        <img src="img2.jpeg" alt="">
+        <img src="img3.jpeg" alt="">
+        <img src="img4.jpeg" alt="">
         
 
         <p> Anime Carousel</p>
